--- a/fly.toml
+++ b/fly.toml
@@ -19,6 +19,14 @@ PORT = "5000"
   min_machines_running = 0
   processes = ['app']
 
+[[mounts]]
+  source = "backups"
+  destination = "/backups"
+
+[[cron]]
+  schedule = "0 2 * * *"
+  command = "/backup.sh"
+
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
