--- a/fly.toml
+++ b/fly.toml
@@ -11,13 +11,13 @@ PORT = "5000"
 
 [build]
 
-[http_service]
+[[services]]
   internal_port = 5000
-  force_https = true
-  auto_stop_machines = 'stop'
+  protocol = "tcp"
+  auto_stop_machines = true
   auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
+  min_machines_running = 1
+  processes = ["app"]
 
 [[mounts]]
   source = "backups"
