--- a/fly.toml
+++ b/fly.toml
@@ -1,8 +1,3 @@
-# fly.toml app configuration file generated for dilivery on 2025-06-21T03:49:32+06:00
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
 app = 'dilivery'
 primary_region = 'fra'
 
@@ -18,6 +13,10 @@ PORT = "5000"
   auto_start_machines = true
   min_machines_running = 1
   processes = ["app"]
+
+  [[services.ports]]
+    handlers = ["http"]
+    port = 5000
 
 [[mounts]]
   source = "backups"
