--- a/alembic.ini
+++ b/alembic.ini
@@ -84,7 +84,8 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = postgresql+psycopg2://postgres:тут_пароль@dilivery-db.internal:5432/postgres
+sqlalchemy.url = placeholder
+
 
 
 
